[gd_scene load_steps=2 format=2]

[ext_resource path="res://Avatar.gd" type="Script" id=1]

[node name="Avatar" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Name" type="Label" parent="VBoxContainer"]
margin_top = -1.0
margin_right = 1024.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvatarLog" type="ItemList" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 502.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SendButton" type="Button" parent="VBoxContainer"]
margin_top = 506.0
margin_right = 1024.0
margin_bottom = 526.0
size_flags_horizontal = 3

[node name="MessageInput" type="TextEdit" parent="VBoxContainer"]
margin_top = 530.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 70 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/SendButton" to="." method="_on_SendButton_pressed"]
